force-app/main/default/objects/User/fields/Einstein_HiPo_Likelihood__c.field-meta.xml
<CustomField>
    <fullName>Einstein_HiPo_Likelihood__c</fullName>
    <label>Einstein HiPo Likelihood</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>