force-app/main/default/objects/User/fields/Is_People_Manager__c.field-meta.xml
<CustomField>
    <fullName>Is_People_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is People Manager</label>
    <type>Checkbox</type>
</CustomField>