force-app/main/default/objects/User/fields/Next_Shift_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Shift_End_Date__c</fullName>
    <label>Next Shift End Date</label>
    <type>Date</type>
</CustomField>