force-app/main/default/objects/User/fields/Next_Shift_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Shift_Start_Date__c</fullName>
    <description>Has the Covid shift start date</description>
    <label>Next Shift Start Date</label>
    <type>Date</type>
</CustomField>