force-app/main/default/objects/User/fields/Survey_Taken__c.field-meta.xml
<CustomField>
    <fullName>Survey_Taken__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Survey Taken</label>
    <type>Checkbox</type>
</CustomField>